--- a/docker-nvidia-tutorial.org
+++ b/docker-nvidia-tutorial.org
@@ -2,19 +2,19 @@
 
 * Running a CUDA Capable Docker Container
 
-- Official NVIDIA PyTorch docker container: https://ngc.nvidia.com/catalog/containers/nvidia:pytorch
+- Official NVIDIA PyTorch docker container: https://ngc.nvidia.com/catalog/containers/nvidia:pytorch 
   + Latest image (as of Aug. 2020): *nvcr.io/nvidia/pytorch:20.07-py3*
 
 - Show available GPUs:
-#+begin_src shell
+    #+begin_src shell
 docker run --gpus all -it --rm nvcr.io/nvidia/pytorch:20.07-py3 nvidia-smi
-#+end_src
+    #+end_src
 
 - See if PyTorch can detect CUDA:
-#+begin_src shell
+    #+begin_src shell
 docker run --gpus all --rm nvcr.io/nvidia/pytorch:20.07-py3 \
     python -c "import torch; print(torch.cuda.is_available())"
-#+end_src
+    #+end_src
 
 * Creating a Custom Docker Image
 
@@ -23,7 +23,7 @@ docker run --gpus all --rm nvcr.io/nvidia/pytorch:20.07-py3 \
   + Python environment
 
 - The /Dockerfile/ gives instructions on how to create the environment
-#+begin_src dockerfile
+    #+begin_src dockerfile
 # Select the base image
 FROM nvcr.io/nvidia/pytorch:20.07-py3
 
@@ -38,26 +38,29 @@ RUN git clone https://github.com/SPFlow/SPFlow && \
 
 # Install Python requirements
 RUN pip install -r requirements.txt
-#+end_src
+    #+end_src
 
 - To build a docker image (we now name it ~docker-tutorial~), run:
-#+begin_src shell
+    #+begin_src shell
 docker build -t docker-tutorial .
-#+end_src
+    #+end_src
 
 - To test the docker image, run:
-#+begin_src shell
+    #+begin_src shell
 docker run --gpus all -it --rm docker-tutorial python
-#+end_src
+    #+end_src
+
+
 
 * Running a Project in the Container
 
 - Project source code is not supposed to be built into the docker image
-- Rather, attach all source code as /volume/ when starting a new container
-
-#+begin_src shell
+- Rather, attach all source code as /volume/ when starting a new container:
+ 
+    Use the ~--volume SOURCE:DESTINATION~ to mount a file/directory from the host machine into the docker container:
+    #+begin_src shell
 docker run --gpus all --rm -it \
-    -v "$(pwd)"/src:/app/src \
+    --volume "$(pwd)"/src:/app/src \
     docker-tutorial \
-    python src/run.py
-#+end_src
+    python /app/src/run.py
+    #+end_src
