--- a/docker-nvidia-tutorial.org
+++ b/docker-nvidia-tutorial.org
@@ -37,6 +37,7 @@ RUN git clone https://github.com/SPFlow/SPFlow && \
     pip install dist/spflow-0.0.40-py3-none-any.whl
 
 # Install Python requirements
+COPY ./requirements.txt ./requirements.txt
 RUN pip install -r requirements.txt
     #+end_src
 
