Update nvcr image

--- a/README.org
+++ b/README.org
@@ -3,16 +3,16 @@
 * Running a CUDA Capable Docker Container
 
 - Official NVIDIA PyTorch docker container: https://ngc.nvidia.com/catalog/containers/nvidia:pytorch 
-  + Latest image (as of Aug. 2020): *nvcr.io/nvidia/pytorch:20.07-py3*
+  + Latest image (as of Dec. 2023): *nvcr.io/nvidia/pytorch:23.12-py3*
 
 - Show available GPUs:
     #+begin_src shell
-docker run --gpus all -it --rm nvcr.io/nvidia/pytorch:20.07-py3 nvidia-smi
+docker run --gpus all -it --rm nvcr.io/nvidia/pytorch:23.12-py3 nvidia-smi
     #+end_src
 
 - See if PyTorch can detect CUDA:
     #+begin_src shell
-docker run --gpus all --rm nvcr.io/nvidia/pytorch:20.07-py3 \
+docker run --gpus all --rm nvcr.io/nvidia/pytorch:23.12-py3 \
     python -c "import torch; print(torch.cuda.is_available())"
     #+end_src
 
@@ -25,16 +25,13 @@ docker run --gpus all --rm nvcr.io/nvidia/pytorch:20.07-py3 \
 - The /Dockerfile/ gives instructions on how to create the environment
     #+begin_src dockerfile
 # Select the base image
-FROM nvcr.io/nvidia/pytorch:20.07-py3
+FROM nvcr.io/nvidia/pytorch:23.12-py3
 
 # Select the working directory
 WORKDIR /app
 
-# Install SPFlow from the master branch
-RUN git clone https://github.com/SPFlow/SPFlow && \
-    cd SPFlow/src && \
-    bash create_pip_dist.sh && \
-    pip install dist/spflow-0.0.40-py3-none-any.whl
+# Setup image: install system dependencies etc.
+# RUN ...
 
 # Install Python requirements
 COPY ./requirements.txt ./requirements.txt
