--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
-#+TITLE: Stateless Docker Machine Learning Experiments Tutorial
+#+TITLE: Stateless Docker Machine Learning Experiments
 
-In this tutorial we want explore how we can use docker as a thin wrapper to run machine learning experiments in a /stateless/ way. What do I mean by stateless? Let's look at a /stateful/ solution: We use some base image, e.g. =nvcr.io/nvidia/pytorch:23.12-py3=, and start an interactive container based off this image. We then attach a shell to this container and set up our system dependencies and project dependencies (e.g. pip requirements). To run our experiment we start some command =python main.py --foo --bar=. We get some results somewhere which we need to copy to some volume mapped directory on the host. We further modify something here and there in the container. Now the running container has a certain /state/. Sure we can detach and attach the container and hope that the server on which the container runs is never rebooted, or that we never have to switch the server and set everything up again. In most of these cases, we end up loosing our state and the actual experiment (running =python main.py ...=) becomes harder to reproduce.
+Here we want explore how we can use docker as a thin wrapper to run machine learning experiments in a /stateless/ way. What do I mean by stateless? Let's look at a /stateful/ solution: We use some base image, e.g. =nvcr.io/nvidia/pytorch:23.12-py3=, and start an interactive container based off this image. We then attach a shell to this container and set up our system dependencies and project dependencies (e.g. pip requirements). To run our experiment we start some command =python main.py --foo --bar=. We get some results somewhere which we need to copy to some volume mapped directory on the host. We further modify something here and there in the container. Now the running container has a certain /state/. Sure we can detach and attach the container and hope that the server on which the container runs is never rebooted, or that we never have to switch the server and set everything up again. In most of these cases, we end up loosing our state and the actual experiment (running =python main.py ...=) becomes harder to reproduce.
 
 *A stateless setup*: In a stateless docker setup, we want docker to act as a virtual environment for everything that is not (a) our code, (b) our data, and (c) our results. That is, we want docker to define the operating system, the system dependencies, the python version and environment, and the python dependencies. In docker, this can be done by defining a docker custom image in a [[file:Dockerfile][Dockerfile]]:
 
