--- a/README.org
+++ b/README.org
@@ -66,7 +66,7 @@ Number of CUDA Devices Available: 16
 Current CUDA Device Index: 0
 #+end_src
 
-We can now investigate the saved result in =results/sums.csv=:
+We can now investigate the saved result on the host (i.e., not in the docker container) in =results/sums.csv=:
 
 #+begin_src shell
 $ cat results/sums.csv
